Update all URLs to production (https://www.getairdesk.xyz)
- Update env.local.template with production URL
- Update WEBHOOK_FIX_INSTRUCTIONS.md with production URL
- Update all script files to use production URL as default
- All new Vapi assistants will automatically use production URL via NEXT_PUBLIC_APP_URL
- Existing assistants remain unchanged (only new ones use production)

--- a/env.local.template
+++ b/env.local.template
@@ -18,9 +18,9 @@ VAPI_API_KEY=your_vapi_api_key_here
 # ============================================
 # Application URL
 # ============================================
-# Your production domain (e.g., https://www.airdesk.com)
+# Your production domain (e.g., https://www.getairdesk.xyz)
 # Vercel automatically sets VERCEL_URL, but you can override with this
-NEXT_PUBLIC_APP_URL=https://www.airdesk.com
+NEXT_PUBLIC_APP_URL=https://www.getairdesk.xyz
 
 # ============================================
 # Supabase Credentials
